updated the code of kg - added more info + prepared for the video

--- a/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/explore_movie_data.ipynb
+++ b/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/explore_movie_data.ipynb
@@ -12,12 +12,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(here(\"data/movie_csv/movie.csv\"))\n",
     "df['released'] = pd.to_datetime(df['released'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>released</th>\n",
+       "      <th>title</th>\n",
+       "      <th>actors</th>\n",
+       "      <th>director</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>imdbRating</th>\n",
+       "      <th>similar_movie</th>\n",
+       "      <th>tagline</th>\n",
+       "      <th>location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1995-11-22</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>Jim Varney|Tim Allen|Tom Hanks|Don Rickles</td>\n",
+       "      <td>John Lasseter</td>\n",
+       "      <td>Adventure|Animation|Children|Comedy|Fantasy</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>Finding Nemo</td>\n",
+       "      <td>The adventure takes off!</td>\n",
+       "      <td>United States</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1995-12-15</td>\n",
+       "      <td>Jumanji</td>\n",
+       "      <td>Robin Williams|Bradley Pierce|Kirsten Dunst|Jo...</td>\n",
+       "      <td>Joe Johnston</td>\n",
+       "      <td>Adventure|Children|Fantasy</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>Jumanji: Welcome to the Jungle</td>\n",
+       "      <td>Roll the dice and unleash the excitement!</td>\n",
+       "      <td>United States</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1995-12-22</td>\n",
+       "      <td>Grumpier Old Men</td>\n",
+       "      <td>Walter Matthau|Ann-Margret|Jack Lemmon|Sophia ...</td>\n",
+       "      <td>Howard Deutch</td>\n",
+       "      <td>Comedy|Romance</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>The Bucket List</td>\n",
+       "      <td>Still Yelling. Still Fighting. Still Ready for...</td>\n",
+       "      <td>United States</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   movieId   released             title  \\\n",
+       "0        1 1995-11-22         Toy Story   \n",
+       "1        2 1995-12-15           Jumanji   \n",
+       "2        3 1995-12-22  Grumpier Old Men   \n",
+       "\n",
+       "                                              actors       director  \\\n",
+       "0         Jim Varney|Tim Allen|Tom Hanks|Don Rickles  John Lasseter   \n",
+       "1  Robin Williams|Bradley Pierce|Kirsten Dunst|Jo...   Joe Johnston   \n",
+       "2  Walter Matthau|Ann-Margret|Jack Lemmon|Sophia ...  Howard Deutch   \n",
+       "\n",
+       "                                        genres  imdbRating  \\\n",
+       "0  Adventure|Animation|Children|Comedy|Fantasy         8.3   \n",
+       "1                   Adventure|Children|Fantasy         6.9   \n",
+       "2                               Comedy|Romance         6.6   \n",
+       "\n",
+       "                    similar_movie  \\\n",
+       "0                    Finding Nemo   \n",
+       "1  Jumanji: Welcome to the Jungle   \n",
+       "2                 The Bucket List   \n",
+       "\n",
+       "                                             tagline       location  \n",
+       "0                           The adventure takes off!  United States  \n",
+       "1          Roll the dice and unleash the excitement!  United States  \n",
+       "2  Still Yelling. Still Fighting. Still Ready for...  United States  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(3)"
    ]
   },
   {
@@ -189,7 +307,7 @@
     }
    ],
    "source": [
-    "# \"What the similar movies to the ones that Tom Hanks acted in?\"\n",
+    "# \"What are the similar movies to the ones that Tom Hanks acted in?\"\n",
     "df_tom_hanks = df[df['actors'].str.contains('tom hanks', case=False)]\n",
     "display(df_tom_hanks[[\"title\", \"similar_movie\"]])"
    ]
@@ -325,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
