--- a/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/2_AzureOpenAI_GraphDB_RAG_data_preparation.ipynb
+++ b/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/2_AzureOpenAI_GraphDB_RAG_data_preparation.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -109,8 +109,7 @@
     }
    ],
    "source": [
-    "# movie_csv_path = here(\"data/movie_csv/movie.csv\")\n",
-    "movie_csv_path = here(\"C:/Users/froozitalab/movie.csv\")\n",
+    "movie_csv_path = here(\"data/movie_csv/movie.csv\")\n",
     "print(pd.read_csv(movie_csv_path).columns)\n",
     "print(\"DAta shape:\", pd.read_csv(movie_csv_path).shape)"
    ]
@@ -138,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +146,7 @@
        "[]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -201,11 +200,11 @@
      "output_type": "stream",
      "text": [
       "Node properties are the following:\n",
-      "Movie {title: STRING, tagline: STRING, imdbRating: FLOAT, id: STRING, released: DATE},Person {name: STRING},Genre {name: STRING},Location {name: STRING},SimilarMovie {name: STRING}\n",
+      "Movie {imdbRating: FLOAT, taglineEmbedding: LIST, tagline: STRING, id: STRING, released: DATE, title: STRING},Person {name: STRING},Genre {name: STRING},Location {name: STRING},SimilarMovie {name: STRING}\n",
       "Relationship properties are the following:\n",
       "\n",
       "The relationships are the following:\n",
-      "(:Movie)-[:IN_GENRE]->(:Genre),(:Movie)-[:WAS_TAKEN_IN]->(:Location),(:Movie)-[:IS_SIMILAR_TO]->(:SimilarMovie),(:Person)-[:DIRECTED]->(:Movie),(:Person)-[:ACTED_IN]->(:Movie)\n"
+      "(:Movie)-[:IS_SIMILAR_TO]->(:SimilarMovie),(:Movie)-[:IN_GENRE]->(:Genre),(:Movie)-[:WAS_TAKEN_IN]->(:Location),(:Person)-[:DIRECTED]->(:Movie),(:Person)-[:ACTED_IN]->(:Movie)\n"
      ]
     }
    ],
@@ -223,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +231,7 @@
        "[{'count(n)': 155}]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +264,7 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -395,14 +394,13 @@
        "2  Still Yelling. Still Fighting. Still Ready for...  United States  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# movie_csv_path = here(\"data/movie_csv/movie.csv\")\n",
-    "movie_csv_path = here(\"C:/Users/froozitalab/movie.csv\")\n",
+    "movie_csv_path = here(\"data/movie_csv/movie.csv\")\n",
     "df = pd.read_csv(movie_csv_path)\n",
     "print(df.columns)\n",
     "df.head(3)"
@@ -410,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +471,7 @@
        "Name: tagline, dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -507,14 +505,14 @@
     {
      "data": {
       "text/plain": [
-       "[0.02379636839032173,\n",
-       " -0.036385245621204376,\n",
-       " -0.006874361541122198,\n",
-       " -0.012947257608175278,\n",
-       " -0.02100752852857113]"
+       "[0.023812185972929,\n",
+       " -0.036298904567956924,\n",
+       " -0.006856604944914579,\n",
+       " -0.012976010330021381,\n",
+       " -0.020980820059776306]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +575,7 @@
        "      <td>Finding Nemo</td>\n",
        "      <td>The adventure takes off!</td>\n",
        "      <td>United States</td>\n",
-       "      <td>[0.02379636839032173, -0.036385245621204376, -...</td>\n",
+       "      <td>[0.023812185972929, -0.036298904567956924, -0....</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -591,7 +589,7 @@
        "      <td>Jumanji: Welcome to the Jungle</td>\n",
        "      <td>Roll the dice and unleash the excitement!</td>\n",
        "      <td>United States</td>\n",
-       "      <td>[-0.005184232257306576, -0.015989607200026512,...</td>\n",
+       "      <td>[-0.005139722488820553, -0.015951087698340416,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -605,7 +603,7 @@
        "      <td>The Bucket List</td>\n",
        "      <td>Still Yelling. Still Fighting. Still Ready for...</td>\n",
        "      <td>United States</td>\n",
-       "      <td>[-0.021981285884976387, -0.022072602063417435,...</td>\n",
+       "      <td>[-0.02191801927983761, -0.022048715502023697, ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -638,12 +636,12 @@
        "2  Still Yelling. Still Fighting. Still Ready for...  United States   \n",
        "\n",
        "                                    taglineEmbedding  \n",
-       "0  [0.02379636839032173, -0.036385245621204376, -...  \n",
-       "1  [-0.005184232257306576, -0.015989607200026512,...  \n",
-       "2  [-0.021981285884976387, -0.022072602063417435,...  "
+       "0  [0.023812185972929, -0.036298904567956924, -0....  \n",
+       "1  [-0.005139722488820553, -0.015951087698340416,...  \n",
+       "2  [-0.02191801927983761, -0.022048715502023697, ...  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +669,7 @@
        "[]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -712,11 +710,11 @@
        "  'properties': ['taglineEmbedding'],\n",
        "  'indexProvider': 'vector-1.0',\n",
        "  'owningConstraint': None,\n",
-       "  'lastRead': neo4j.time.DateTime(2024, 4, 30, 13, 48, 52, 404000000, tzinfo=<UTC>),\n",
-       "  'readCount': 2}]"
+       "  'lastRead': None,\n",
+       "  'readCount': 0}]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +803,7 @@
        "      <td>Finding Nemo</td>\n",
        "      <td>The adventure takes off!</td>\n",
        "      <td>United States</td>\n",
-       "      <td>[0.02379636839032173, -0.036385245621204376, -...</td>\n",
+       "      <td>[0.023812185972929, -0.036298904567956924, -0....</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -819,7 +817,7 @@
        "      <td>Jumanji: Welcome to the Jungle</td>\n",
        "      <td>Roll the dice and unleash the excitement!</td>\n",
        "      <td>United States</td>\n",
-       "      <td>[-0.005184232257306576, -0.015989607200026512,...</td>\n",
+       "      <td>[-0.005139722488820553, -0.015951087698340416,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -833,7 +831,7 @@
        "      <td>The Bucket List</td>\n",
        "      <td>Still Yelling. Still Fighting. Still Ready for...</td>\n",
        "      <td>United States</td>\n",
-       "      <td>[-0.021981285884976387, -0.022072602063417435,...</td>\n",
+       "      <td>[-0.02191801927983761, -0.022048715502023697, ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -866,12 +864,12 @@
        "2  Still Yelling. Still Fighting. Still Ready for...  United States   \n",
        "\n",
        "                                    taglineEmbedding  \n",
-       "0  [0.02379636839032173, -0.036385245621204376, -...  \n",
-       "1  [-0.005184232257306576, -0.015989607200026512,...  \n",
-       "2  [-0.021981285884976387, -0.022072602063417435,...  "
+       "0  [0.023812185972929, -0.036298904567956924, -0....  \n",
+       "1  [-0.005139722488820553, -0.015951087698340416,...  \n",
+       "2  [-0.02191801927983761, -0.022048715502023697, ...  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -909,11 +907,11 @@
      "output_type": "stream",
      "text": [
       "Node properties are the following:\n",
-      "Movie {title: STRING, taglineEmbedding: LIST, tagline: STRING, imdbRating: FLOAT, id: STRING, released: DATE},Person {name: STRING},Genre {name: STRING},Location {name: STRING},SimilarMovie {name: STRING}\n",
+      "Movie {imdbRating: FLOAT, taglineEmbedding: LIST, tagline: STRING, id: STRING, released: DATE, title: STRING},Person {name: STRING},Genre {name: STRING},Location {name: STRING},SimilarMovie {name: STRING}\n",
       "Relationship properties are the following:\n",
       "\n",
       "The relationships are the following:\n",
-      "(:Movie)-[:IN_GENRE]->(:Genre),(:Movie)-[:WAS_TAKEN_IN]->(:Location),(:Movie)-[:IS_SIMILAR_TO]->(:SimilarMovie),(:Person)-[:DIRECTED]->(:Movie),(:Person)-[:ACTED_IN]->(:Movie)\n"
+      "(:Movie)-[:IS_SIMILAR_TO]->(:SimilarMovie),(:Movie)-[:IN_GENRE]->(:Genre),(:Movie)-[:WAS_TAKEN_IN]->(:Location),(:Person)-[:DIRECTED]->(:Movie),(:Person)-[:ACTED_IN]->(:Movie)\n"
      ]
     }
    ],
@@ -931,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +953,7 @@
        "'The adventure takes off!'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,25 +964,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.02379636839032173,\n",
-       " -0.036385245621204376,\n",
-       " -0.006874361541122198,\n",
-       " -0.012947257608175278,\n",
-       " -0.02100752852857113,\n",
-       " 0.028044788166880608,\n",
-       " -0.016055380925536156,\n",
-       " -0.0235748253762722,\n",
-       " 0.002005293732509017,\n",
-       " -0.014426385052502155]"
+       "[0.023812185972929,\n",
+       " -0.036298904567956924,\n",
+       " -0.006856604944914579,\n",
+       " -0.012976010330021381,\n",
+       " -0.020980820059776306,\n",
+       " 0.027922235429286957,\n",
+       " -0.0160096175968647,\n",
+       " -0.02359037473797798,\n",
+       " 0.0020631791558116674,\n",
+       " -0.014600458554923534]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1008,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
