updated the notebooks

--- a/Q&A-and-RAG-with-SQL-and-TabularData/explore/4_query_and_QA_sqldb_from_csv.ipynb
+++ b/Q&A-and-RAG-with-SQL-and-TabularData/explore/4_query_and_QA_sqldb_from_csv.ipynb
@@ -142,9 +142,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "887"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain_community.utilities import SQLDatabase\n",
     "from sqlalchemy import create_engine\n",
@@ -161,9 +172,10 @@
    "metadata": {},
    "source": [
     "For multiple csv files, we can create a sql with multiple tables:\n",
-    "- df1.to_sql(\"csv1_name\", engine, index=False)\n",
-    "- df2.to_sql(\"csv2_name\", engine, index=False)\n",
-    "- ..."
+    "```\n",
+    "df1.to_sql(\"csv1_name\", engine, index=False)\n",
+    "df2.to_sql(\"csv2_name\", engine, index=False)\n",
+    "```"
    ]
   },
   {
@@ -643,8 +655,7 @@
     }
    ],
    "source": [
-    "agent_executor.invoke({\"input\": \"what's the average age of survivors\"})\n",
-    "# agent_executor.invoke({\"what's the average age of survivors\"})"
+    "agent_executor.invoke({\"input\": \"what's the average age of survivors\"})"
    ]
   },
   {
@@ -685,7 +696,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
