--- a/Q&A-and-RAG-with-SQL-and-TabularData/explore/3_query_and_QA_sqldb.ipynb
+++ b/Q&A-and-RAG-with-SQL-and-TabularData/explore/3_query_and_QA_sqldb.ipynb
@@ -27,19 +27,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Connecting to the sqldb**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "db_path = str(here(\"data\")) + \"/sqldb.db\"\n",
-    "# connecting to the vectordb\n",
     "db = SQLDatabase.from_uri(f\"sqlite:///{db_path}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<langchain_community.utilities.sql_database.SQLDatabase at 0x2203a2c7690>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +82,7 @@
        "\"[(1, 'AC/DC'), (2, 'Accept'), (3, 'Aerosmith'), (4, 'Alanis Morissette'), (5, 'Alice In Chains'), (6, 'Antônio Carlos Jobim'), (7, 'Apocalyptica'), (8, 'Audioslave'), (9, 'BackBeat'), (10, 'Billy Cobham')]\""
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
