update kg with tabular data

--- a/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/4_AzureOpenAI_Langchain_Q_A_with_GraphDB_using_LLM_Agent.ipynb
+++ b/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/4_AzureOpenAI_Langchain_Q_A_with_GraphDB_using_LLM_Agent.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
       "Relationship properties are the following:\n",
       "\n",
       "The relationships are the following:\n",
-      "(:Movie)-[:IS_SIMILAR_TO]->(:SimilarMovie),(:Movie)-[:IN_GENRE]->(:Genre),(:Movie)-[:WAS_TAKEN_IN]->(:Location),(:Person)-[:DIRECTED]->(:Movie),(:Person)-[:ACTED_IN]->(:Movie)\n"
+      "(:Movie)-[:IN_GENRE]->(:Genre),(:Movie)-[:WAS_TAKEN_IN]->(:Location),(:Movie)-[:IS_SIMILAR_TO]->(:SimilarMovie),(:Person)-[:DIRECTED]->(:Movie),(:Person)-[:ACTED_IN]->(:Movie)\n"
      ]
     }
    ],
@@ -145,13 +145,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "q_one = \"What was the cast of the Casino?\"\n",
     "q_two = \"What are the most common genres for movies released in 1995?\"\n",
-    "q_three = \"What the similar movies to the ones that Tom Hanks acted in?\""
+    "q_three = \"What are the similar movies to the ones that Tom Hanks acted in?\""
    ]
   },
   {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -194,12 +194,12 @@
       "\u001b[32;1m\u001b[1;3mMATCH (:Movie {title: \"Casino\"})<-[:ACTED_IN]-(actor:Person)\n",
       "RETURN actor.name\u001b[0m\n",
       "Full Context:\n",
-      "\u001b[32;1m\u001b[1;3m[{'actor.name': 'Joe Pesci'}, {'actor.name': 'James Woods'}, {'actor.name': 'Robert De Niro'}, {'actor.name': 'Sharon Stone'}]\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m[{'actor.name': 'James Woods'}, {'actor.name': 'Robert De Niro'}, {'actor.name': 'Sharon Stone'}, {'actor.name': 'Joe Pesci'}]\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "{'query': 'What was the cast of the Casino?', 'result': 'The cast of Casino included Joe Pesci, James Woods, Robert De Niro, and Sharon Stone.'}\n",
+      "{'query': 'What was the cast of the Casino?', 'result': 'The cast of Casino included James Woods, Robert De Niro, Sharon Stone, and Joe Pesci.'}\n",
       "\n",
-      "LLM response: The cast of Casino included Joe Pesci, James Woods, Robert De Niro, and Sharon Stone.\n"
+      "LLM response: The cast of Casino included James Woods, Robert De Niro, Sharon Stone, and Joe Pesci.\n"
      ]
     }
    ],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -222,10 +222,11 @@
       "\n",
       "\u001b[1m> Entering new GraphCypherQAChain chain...\u001b[0m\n",
       "Generated Cypher:\n",
-      "\u001b[32;1m\u001b[1;3mMATCH (m:Movie)-[:IN_GENRE]->(g:Genre)\n",
+      "\u001b[32;1m\u001b[1;3mMATCH (m:Movie)\n",
       "WHERE m.released = date(\"1995-01-01\")\n",
-      "RETURN g.name, COUNT(*) AS genreCount\n",
-      "ORDER BY genreCount DESC\n",
+      "MATCH (m)-[:IN_GENRE]->(g:Genre)\n",
+      "RETURN g.name, COUNT(*) AS count\n",
+      "ORDER BY count DESC\n",
       "LIMIT 5;\u001b[0m\n",
       "Full Context:\n",
       "\u001b[32;1m\u001b[1;3m[]\u001b[0m\n",
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +263,7 @@
       "\u001b[32;1m\u001b[1;3m[{'similar.name': 'Finding Nemo'}]\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "{'query': 'What the similar movies to the ones that Tom Hanks acted in?', 'result': \"I don't know the answer.\"}\n",
+      "{'query': 'What are the similar movies to the ones that Tom Hanks acted in?', 'result': \"I don't know the answer.\"}\n",
       "\n",
       "LLM response: I don't know the answer.\n"
      ]
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -317,12 +318,12 @@
       "\u001b[32;1m\u001b[1;3mMATCH (:Movie {title: \"Casino\"})<-[:ACTED_IN]-(actor:Person)\n",
       "RETURN actor.name\u001b[0m\n",
       "Full Context:\n",
-      "\u001b[32;1m\u001b[1;3m[{'actor.name': 'Joe Pesci'}, {'actor.name': 'James Woods'}, {'actor.name': 'Robert De Niro'}, {'actor.name': 'Sharon Stone'}]\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m[{'actor.name': 'James Woods'}, {'actor.name': 'Robert De Niro'}, {'actor.name': 'Sharon Stone'}, {'actor.name': 'Joe Pesci'}]\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "{'query': 'What was the cast of the Casino?', 'result': 'The cast of Casino included Joe Pesci, James Woods, Robert De Niro, and Sharon Stone.'}\n",
+      "{'query': 'What was the cast of the Casino?', 'result': 'The cast of Casino included James Woods, Robert De Niro, Sharon Stone, and Joe Pesci.'}\n",
       "\n",
-      "LLM response: The cast of Casino included Joe Pesci, James Woods, Robert De Niro, and Sharon Stone.\n"
+      "LLM response: The cast of Casino included James Woods, Robert De Niro, Sharon Stone, and Joe Pesci.\n"
      ]
     }
    ],
@@ -334,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -345,10 +346,11 @@
       "\n",
       "\u001b[1m> Entering new GraphCypherQAChain chain...\u001b[0m\n",
       "Generated Cypher:\n",
-      "\u001b[32;1m\u001b[1;3mMATCH (m:Movie)-[:IN_GENRE]->(g:Genre)\n",
+      "\u001b[32;1m\u001b[1;3mMATCH (m:Movie)\n",
       "WHERE m.released = date(\"1995-01-01\")\n",
-      "RETURN g.name, COUNT(*) AS genreCount\n",
-      "ORDER BY genreCount DESC\n",
+      "MATCH (m)-[:IN_GENRE]->(g:Genre)\n",
+      "RETURN g.name, COUNT(*) AS count\n",
+      "ORDER BY count DESC\n",
       "LIMIT 5;\u001b[0m\n",
       "Full Context:\n",
       "\u001b[32;1m\u001b[1;3m[]\u001b[0m\n",
@@ -368,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +387,7 @@
       "\u001b[32;1m\u001b[1;3m[{'similar.name': 'Finding Nemo'}]\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "{'query': 'What the similar movies to the ones that Tom Hanks acted in?', 'result': \"I don't know the answer.\"}\n",
+      "{'query': 'What are the similar movies to the ones that Tom Hanks acted in?', 'result': \"I don't know the answer.\"}\n",
       "\n",
       "LLM response: I don't know the answer.\n"
      ]
@@ -435,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +484,7 @@
      "output_type": "stream",
      "text": [
       "{'question': 'What are the most common genres for movies released in 1995?', 'function': Entities(names=['1995'])}\n",
-      "{'question': 'What the similar movies to the ones that Tom Hanks acted in?', 'function': Entities(names=['Tom Hanks'])}\n"
+      "{'question': 'What are the similar movies to the ones that Tom Hanks acted in?', 'function': Entities(names=['Tom Hanks'])}\n"
      ]
     }
    ],
@@ -502,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,14 +604,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MATCH (p:Person {name: 'Tom Hanks'})-[:ACTED_IN]->(:Movie)-[:IS_SIMILAR_TO]->(s:SimilarMovie)\n",
+      "MATCH (p:Person {name: 'Tom Hanks'})-[:ACTED_IN]->(m:Movie)-[:IS_SIMILAR_TO]->(s:SimilarMovie)\n",
       "RETURN s.name\n"
      ]
     }
@@ -630,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,16 +675,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'The cast of the movie \"Casino\" includes Joe Pesci, James Woods, Robert De Niro, and Sharon Stone.'"
+       "'The cast of the movie \"Casino\" includes James Woods, Robert De Niro, Sharon Stone, and Joe Pesci.'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +704,7 @@
        "'The most common genres for movies released in 1995 are Comedy with 10 movies, Adventure with 6 movies, Action and Romance with 5 movies each, and Children with 4 movies.'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,16 +715,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Similar movies to the ones that Tom Hanks acted in include \"Finding Nemo\".'"
+       "'Similar movies to the ones that Tom Hanks acted in include \"Toy Story\" and \"Finding Nemo\".'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,16 +735,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'There are 5 movies in the database that belong to the Action genre.'"
+       "'There are 5 movies in the database that have the Action genre.'"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
