--- a/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/5_AzureOpenAI_GraphDB_RAG.ipynb
+++ b/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/5_AzureOpenAI_GraphDB_RAG.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,11 +108,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "question = \"What movies are about crime?\""
+    "question = \"What movies are about love?\""
    ]
   },
   {
@@ -124,25 +124,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.023391522467136383,\n",
-       " -0.032135896384716034,\n",
-       " 0.001850268105044961,\n",
-       " -0.03603663668036461,\n",
-       " -0.030766762793064117,\n",
-       " 0.019232455641031265,\n",
-       " 0.007162119727581739,\n",
-       " -0.01681709662079811,\n",
-       " -0.006209538783878088,\n",
-       " -0.017695408314466476]"
+       "[-0.004219826776534319,\n",
+       " -0.03029683791100979,\n",
+       " 0.0007639749674126506,\n",
+       " -0.02761838585138321,\n",
+       " -0.007965870201587677,\n",
+       " 0.0019409307278692722,\n",
+       " -0.006576106883585453,\n",
+       " -0.021617135033011436,\n",
+       " -0.002027790993452072,\n",
+       " -0.008066943846642971]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -169,16 +169,16 @@
       "text/plain": [
        "[{'movie.title': 'Heat',\n",
        "  'movie.tagline': 'A Los Angeles crime saga',\n",
-       "  'score': 0.9320709109306335},\n",
+       "  'score': 0.8910084962844849},\n",
+       " {'movie.title': 'Grumpier Old Men',\n",
+       "  'movie.tagline': 'Still Yelling. Still Fighting. Still Ready for Love.',\n",
+       "  'score': 0.8878611922264099},\n",
        " {'movie.title': 'Tom and Huck',\n",
        "  'movie.tagline': 'The Original Bad Boys.',\n",
-       "  'score': 0.9016362428665161},\n",
-       " {'movie.title': 'Balto',\n",
-       "  'movie.tagline': 'Part Dog. Part Wolf. All Hero.',\n",
-       "  'score': 0.8778379559516907}]"
+       "  'score': 0.8836773633956909}]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,14 +209,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The movies about crime are \"Heat\" and \"Tom and Huck\".\n"
+      "The movies that are about love are \"Heat\", \"Grumpier Old Men\" and \"Tom and Huck\".\n"
      ]
     }
    ],
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -265,10 +265,10 @@
      "output_type": "stream",
      "text": [
       "The movies about adventure are:\n",
-      "1. Toy Story - \"The adventure takes off!\"\n",
-      "2. Cutthroat Island - \"The Course Has Been Set. There Is No Turning Back. Prepare Your Weapons. Summon Your Courage. Discover the Adventure of a Lifetime!\"\n",
-      "3. Tom and Huck - \"The Original Bad Boys.\"\n",
-      "4. Jumanji - \"Roll the dice and unleash the excitement!\"\n"
+      "- Toy Story \n",
+      "- Cutthroat Island \n",
+      "- Tom and Huck \n",
+      "- Jumanji\n"
      ]
     }
    ],
